# TradeArena

./: Dockerfile  README.md  app.py  fixjs.py  inference.py  openenv.yaml  patch.py  pyproject.toml  requirements.txt  trading_results.csv
baseline/: run_baseline.py
data/: NIFTY 50_minute.csv
server/: app.py  environment.py
tasks/: tasks.py
